legacy/apps/newreleases-dispatch-action/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: newreleases-dispatch-action-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
  - host: newreleases.arq.dev
    http:
      paths:
      - pathType: ImplementationSpecific
        backend:
          service:
            name: newreleases-dispatch-action-service
            port:
              number: 80
  tls:
  - hosts:
    - newreleases.arq.dev
    secretName: newreleases-dispatch-action-cert
